<resources>
    <string name="app_name">Qdamos</string>
    <string name="title_home">Home</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_login">Login</string>
    <string name="title_registro">Registro</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_actividades">Mis qdds</string>
    <string name="title_crear">Crear</string>
    <string name="title_notifications">Notifications</string>


</resources>