<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explorar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explorar" />
    <item
        android:id="@+id/navigation_actividades"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_actividades" />
    <item
        android:id="@+id/navigation_crear"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_crear" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
</menu>