<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.justaproject.qdamos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.justaproject.qdamos.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.justaproject.qdamos.ui.explorar.ExplorarFragment"
        android:label="@string/title_explorar"
        tools:layout="@layout/fragment_explorar" />
    <fragment
        android:id="@+id/navigation_actividades"
        android:name="com.justaproject.qdamos.ui.actividades.ActividadesFragment"
        android:label="@string/title_actividades"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_crear"
        android:name="com.justaproject.qdamos.ui.crear.CrearFragment"
        android:label="@string/title_crear"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.justaproject.qdamos.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>